# gc-qa-rag

./: .gitignore  404.html  LICENSE  README.md  README_ENGLISH.md  README_PGVECTOR.md  index.html  mkdocs.yml  pyproject.toml  quickstart.md  quickstart_ENGLISH.md  temp_8001.html
docs/: index.md  (+4 more)
sources/ai_knowledge_service/: .env.example  .gitignore  README.md  __init__.py  pyproject.toml  run_doc_pipeline.bat  run_forum_qa_pipeline.bat  run_forum_tutorial_pipeline.bat  run_pipeline.bat
sources/ai_knowledge_service/abstractions/: __init__.py
sources/ai_knowledge_service/abstractions/config/: __init__.py  schemas.py
sources/ai_knowledge_service/abstractions/execution/: __init__.py  executor.py  queue.py  scheduler.py
sources/ai_knowledge_service/abstractions/infrastructure/: __init__.py  container.py  event_bus.py  version_manager.py
sources/ai_knowledge_service/abstractions/models/: __init__.py  index.py  knowledge_base.py  raw_file.py  tasks.py
sources/ai_knowledge_service/abstractions/observability/: __init__.py  context.py  health.py  logging.py  metrics.py  tracing.py
sources/ai_knowledge_service/abstractions/pipelines/: __init__.py  publishing.py  source.py  steps.py
sources/ai_knowledge_service/abstractions/storage/: __init__.py  index_storage.py  raw_file_storage.py
sources/ai_knowledge_service/api/: __init__.py  config.py  dependencies.py  di_setup.py  event_handlers.py  main.py
sources/ai_knowledge_service/api/middleware/: __init__.py  error_handler.py
sources/ai_knowledge_service/api/routers/: __init__.py  connectors.py  environments.py  knowledge_bases.py  system.py  tasks.py  versions.py
sources/ai_knowledge_service/api/schemas/: __init__.py  common.py  environment.py  knowledge_base.py  task.py  version.py
sources/ai_knowledge_service/api/websocket/: __init__.py  task_updates.py
sources/ai_knowledge_service/core/: __init__.py
sources/ai_knowledge_service/core/executors/: __init__.py  base_executor.py  indexing_executor.py  ingestion_executor.py  publishing_executor.py
sources/ai_knowledge_service/core/scheduler/: __init__.py  thread_scheduler.py
sources/ai_knowledge_service/examples/: __init__.py  run_doc_pipeline.py  run_forum_qa_pipeline.py  run_forum_tutorial_pipeline.py  run_generic_pipeline.py
sources/ai_knowledge_service/implementations/: __init__.py
sources/ai_knowledge_service/implementations/connectors/: __init__.py  filesystem_connector.py  forum_api_connector.py  sitemap_connector.py
sources/ai_knowledge_service/implementations/infrastructure/: __init__.py  memory_event_bus.py  memory_queue.py  simple_container.py  sqlite_version_manager.py
sources/ai_knowledge_service/implementations/llm/: __init__.py  llm_client.py
sources/ai_knowledge_service/implementations/observability/: __init__.py  console_logger.py  noop_metrics.py  noop_tracer.py
sources/ai_knowledge_service/implementations/steps/: __init__.py
sources/ai_knowledge_service/implementations/steps/chunkers/: __init__.py  sentence_chunker.py
sources/ai_knowledge_service/implementations/steps/embedders/: __init__.py  dashscope_embedder.py
sources/ai_knowledge_service/implementations/steps/enrichers/: __init__.py  full_answer_enricher.py  qa_enricher.py
sources/ai_knowledge_service/implementations/storage/: __init__.py  composite_raw_file_storage.py  filesystem_content_store.py  qdrant_index_storage.py  sqlite_metadata_store.py
sources/ai_knowledge_service/tests/: __init__.py  conftest.py  test_console_logger.py  test_memory_event_bus.py  test_memory_queue.py  test_simple_container.py  test_storage.py  test_version_manager.py
sources/ai_knowledge_service/tests/core/: test_executors.py  test_thread_scheduler.py
sources/ai_knowledge_service/tests/implementations/: __init__.py  test_dashscope_embedder.py  test_filesystem_connector.py  test_forum_api_connector.py  test_forum_parsers.py  test_full_answer_enricher.py  test_html_parser.py  test_qa_enricher.py  test_qdrant_index_storage.py  test_sentence_chunker.py  test_sitemap_connector.py
sources/ai_knowledge_service/tests/integration/: test_generic_pipeline.py
tools/gc-qa-rag-eval/: .gitignore  AGENTIC_MODE.md  eval_report.md  eval_result.md  eval_tech.md  pyproject.toml  活字格认证考试AI智能测评综合报告.md  让LLM做低代码考试谁会胜出.md
tools/gc-qa-rag-eval/app/: agentic_example.py  analyze.py  eval.py  llm.py  main.py  query.py  question.py
(+346 files in other folders)
