[project]
name = "ai-knowledge-service"
version = "0.1.0"
description = "AI Knowledge Service - ETL abstraction layer"
authors = [{ name = "experdotxie", email = "experdot.xie@developertools.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "qdrant-client>=1.16.2",
    "dashscope>=1.25.8",
    "openai>=1.0.0",
    "markitdown[all]>=0.1.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_knowledge_service*"]

[tool.setuptools.package-dir]
ai_knowledge_service = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["ai_knowledge_service"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
